Add Odroid-C1/C2 hardware acceleration support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,24 +21,24 @@ find_package(Freescale)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(EVDEV REQUIRED libevdev)
 pkg_check_modules(UDEV REQUIRED libudev)
-pkg_check_modules(SDL sdl2>=2.0.4)
-pkg_check_modules(AVCODEC libavcodec)
-pkg_check_modules(AVUTIL libavutil)
-pkg_check_modules(XLIB x11-xcb)
-pkg_check_modules(LIBVA vdpau)
+#pkg_check_modules(SDL sdl2>=2.0.4)
+#pkg_check_modules(AVCODEC libavcodec)
+#pkg_check_modules(AVUTIL libavutil)
+#pkg_check_modules(XLIB x11-xcb)
+#pkg_check_modules(LIBVA vdpau)
 pkg_check_modules(PULSE libpulse-simple)
 pkg_check_modules(CEC libcec>=3.0.0)
 
-if(AVCODEC_FOUND AND AVUTIL_FOUND AND SDL_FOUND)
-  set(SOFTWARE_FOUND TRUE)
-  if(XLIB_FOUND AND LIBVA_FOUND)
-    set(VDPAU_FOUND TRUE)
-  else()
+#if(AVCODEC_FOUND AND AVUTIL_FOUND AND SDL_FOUND)
+#  set(SOFTWARE_FOUND TRUE)
+#  if(XLIB_FOUND AND LIBVA_FOUND)
+#    set(VDPAU_FOUND TRUE)
+#  else()
     set(VDPAU_FOUND FALSE)
-  endif()
-else()
+#  endif()
+#else()
   set(SOFTWARE_FOUND FALSE)
-endif()
+#endif()
 
 SET(MOONLIGHT_COMMON_INCLUDE_DIR ./third_party/moonlight-common-c)
 SET(GAMESTREAM_INCLUDE_DIR ./libgamestream)
@@ -48,7 +48,9 @@ if(CMAKE_BUILD_TYPE MATCHES Debug)
   list(APPEND MOONLIGHT_DEFINITIONS HAVE_FAKE LC_DEBUG)
   list(APPEND MOONLIGHT_OPTIONS FAKE DEBUG)
 elseif(NOT BROADCOM_FOUND AND NOT FREESCALE_FOUND AND NOT SOFTWARE_FOUND)
-  message(FATAL_ERROR "No video output available")
+  #message(FATAL_ERROR "No video output available")
+  message(STATUS "Setting ODROIDCX video")
+  list(APPEND SRC_LIST ./src/video/odroidcx.c)  
 endif()
 
 if (SOFTWARE_FOUND)
@@ -129,6 +131,7 @@ configure_file("./src/configuration.h.in" "${PROJECT_BINARY_DIR}/configuration.h
 set_property(TARGET moonlight PROPERTY COMPILE_DEFINITIONS ${MOONLIGHT_DEFINITIONS})
 target_include_directories(moonlight PRIVATE ${GAMESTREAM_INCLUDE_DIR} ${MOONLIGHT_COMMON_INCLUDE_DIR} ${OPUS_INCLUDE_DIRS} ${EVDEV_INCLUDE_DIRS} ${UDEV_INCLUDE_DIRS})
 target_link_libraries(moonlight ${EVDEV_LIBRARIES} ${ALSA_LIBRARY} ${OPUS_LIBRARY} ${UDEV_LIBRARIES} ${CMAKE_DL_LIBS})
+target_link_libraries(moonlight Mali /usr/lib/aml_libs/libamcodec.so /usr/lib/aml_libs/libamadec.so /usr/lib/aml_libs/libamavutils.so)
 
 add_subdirectory(docs)
 
